--- a/app/views/boards/show.html.erb
+++ b/app/views/boards/show.html.erb
@@ -15,7 +15,7 @@
       Add a new post
     </h2>
 
-    <form action="/insert_post/"  method="post" >
+    <form action="/insert_post"  method="post" >
       <div>
         <label for="title_box">
           Title
@@ -58,8 +58,9 @@
 <hr>
 
 
-<% matching_posts = Post.where({ :board_id => @the_board.id}).order({ :expires_on => :asc})%>
-
+<h2>Active Posts</h2>
+<%# matching_posts = Post.where({ :board_id => @the_board.id, :expires_on > @today}).order({ :expires_on => :asc})%>
+<% active_posts = Post.where("board_id = ? AND expires_on > ?", @the_board.id, Date.today).order({ :expires_on => :asc }) %>
 <table border = "1">
   <tr>
     <th>Title</th>
@@ -69,7 +70,31 @@
   </tr>
 
 
-<% matching_posts.each do |a_post| %>
+<% active_posts.each do |a_post| %>
+  
+  <tr>
+    <td><%= a_post.title %></td>
+    <td><%= a_post.body %></td>
+    <td><%= a_post.created_at.strftime("%b %e, %Y") %></td>
+    <td><%= a_post.expires_on.strftime("%b %e, %Y") %></td>  
+  </tr>
+
+<% end %>
+</table>
+
+<h2>Expired Posts</h2>
+
+<% expired_posts = Post.where("board_id = ? AND expires_on < ?", @the_board.id, Date.today).order({ :expires_on => :asc }) %>
+<table border = "1">
+  <tr>
+    <th>Title</th>
+    <th>Body</th>
+    <th>Posted On</th>
+    <th>Expired On</th>  
+  </tr>
+
+
+<% expired_posts.each do |a_post| %>
   
   <tr>
     <td><%= a_post.title %></td>
